# ProgressQuestPlusPlus

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
lib/nana/: CMakeLists.txt  ChangeLog.txt
lib/nana/include/nana/: c++defines.hpp
lib/zlib/cmake-zlib-build/: CTestTestfile.cmake  cmake_install.cmake  zlibd.exp  zlibd.lib  zlibstaticd.lib
lib/zlib/cmake-zlib-build-/: CTestTestfile.cmake  cmake_install.cmake  zlib.pc  zlibd.exp
lib/zstr/: CMakeLists.txt
lib/zstr/cmake-zstr-build/: cmake_install.cmake
lib/zstr/src/: zstr.hpp
src/: ListviewItemKVPair.hpp  PlayerData.cpp  PlayerData.h  ProgressQuestPlusPlus.cpp  ProgressQuestPlusPlus.h  config.h
src/Gameplay/: Player.cpp  Player.h  PlayerData.cpp  PlayerData.h  PlayerScreen.cpp  PlayerScreen.h
src/Generic/: ListviewItemKVPair.h  RomanDecimal.cpp  RomanDecimal.h
src/Player/: PlayerData.cpp  PlayerData.h  PlayerWidgets.cpp  PlayerWidgets.h
src/PlayerWidgets/: EquipmentWidget.cpp  EquipmentWidget.h  InventoryWidget.cpp  InventoryWidget.h  PlayerWidgets.h  PlotsWidget.cpp  PlotsWidget.h  QuestsWidget.cpp  QuestsWidget.h  SpellsWidget.cpp  SpellsWidget.h  StatsWidget.cpp  StatsWidget.h  TraitsWidget.cpp  TraitsWidget.h
